Fix(section): heart align prix

--- a/style_omf_restaurant.scss
+++ b/style_omf_restaurant.scss
@@ -66,6 +66,11 @@ body{                   /* 100% de la page*/
    text-align: right;
    color: rgb(119, 117, 117);
 }
+@media #{$medium-up} { 
+    .heart_open{              
+         margin-right: 70px;
+}}
+
 .cards_menu{
     background-color: $background-color-grey;
     margin-top: -30px;
@@ -116,8 +121,14 @@ body{                   /* 100% de la page*/
 }
 .somme{
     font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 5px;
 }
-
+@media #{$medium-up} { 
+    .somme{              
+        margin-right: 45px;
+}}
 
 .commander{
     background-color: $background-color-grey;
